{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 28,
  "lineage": "c9266adf-61a6-4d9b-8f97-f09bdef8803b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-087e52a9e3745c108",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-087e52a9e3745c108",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "715652651898",
            "subnet_ids": [
              "subnet-0663fae891aac013a",
              "subnet-08b8b2dca315e7069",
              "subnet-0b133968d0996223a"
            ],
            "tags": {},
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:security-group/sg-02fda38cb88f4e91c",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fda38cb88f4e91c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "715652651898",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_dev_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ebf283c139301464",
            "public_dns": "ec2-54-92-30-167.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.92.30.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awsvm_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3fd0f5d33134a76",
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:instance/i-0cfef77836d664248",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cfef77836d664248",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-05f2cb847a297c02a",
            "private_dns": "ip-115-0-1-184.ap-northeast-1.compute.internal",
            "private_ip": "115.0.1.184",
            "public_dns": "ec2-3-112-127-181.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.127.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-02c329f1fbaab3c1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0663fae891aac013a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02fda38cb88f4e91c"
            ]
          },
          "depends_on": [
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awsvm_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3fd0f5d33134a76",
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:instance/i-0ec433c0ab345ec26",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ec433c0ab345ec26",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-047e853016f69df07",
            "private_dns": "ip-115-0-2-62.ap-northeast-1.compute.internal",
            "private_ip": "115.0.2.62",
            "public_dns": "ec2-54-250-240-94.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.240.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-04ceda437b9c13999",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b8b2dca315e7069",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023d1090c8c31bcf4",
              "sg-02fda38cb88f4e91c"
            ]
          },
          "depends_on": [
            "aws_default_security_group.dev_default",
            "aws_security_group.bastion",
            "aws_subnet.private_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0574b5975b893643f",
            "owner_id": "715652651898",
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01bc7e0d2dee92b7d",
            "owner_id": "715652651898",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0042452b5c572aae8",
            "owner_id": "715652651898",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0574b5975b893643f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_internet_gateway.dev",
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f19ca27bb3f169ec",
            "route_table_id": "rtb-01bc7e0d2dee92b7d",
            "subnet_id": "subnet-08b8b2dca315e7069"
          },
          "depends_on": [
            "aws_route_table.dev_private_1a",
            "aws_subnet.private_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46ed4e68fceb916",
            "route_table_id": "rtb-0042452b5c572aae8",
            "subnet_id": "subnet-0663fae891aac013a"
          },
          "depends_on": [
            "aws_route_table.dev_public",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684b9b464bba191b",
            "route_table_id": "rtb-0042452b5c572aae8",
            "subnet_id": "subnet-0b133968d0996223a"
          },
          "depends_on": [
            "aws_route_table.dev_public",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:security-group/sg-023d1090c8c31bcf4",
            "description": "open ssh port for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023d1090c8c31bcf4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": null,
            "owner_id": "715652651898",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-08b8b2dca315e7069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "115.0.2.0/24",
            "id": "subnet-08b8b2dca315e7069",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-0663fae891aac013a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "115.0.1.0/24",
            "id": "subnet-0663fae891aac013a",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-0b133968d0996223a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "115.0.3.0/24",
            "id": "subnet-0b133968d0996223a",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "vpc_id": "vpc-0f9c3dcdce2b7d1f6"
          },
          "depends_on": [
            "aws_vpc.user10dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "user10dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:vpc/vpc-0f9c3dcdce2b7d1f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "115.0.0.0/16",
            "default_network_acl_id": "acl-087e52a9e3745c108",
            "default_route_table_id": "rtb-0167ed4e799c3cfb8",
            "default_security_group_id": "sg-02fda38cb88f4e91c",
            "dhcp_options_id": "dopt-0d9c2be86ee4efa1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f9c3dcdce2b7d1f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0167ed4e799c3cfb8",
            "owner_id": "715652651898"
          }
        }
      ]
    }
  ]
}